# esphome-weber-connect

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  example.yaml  repository.yaml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql-analysis.yml  github-hosted-runner-policy.yml  publish.yml
components/weber_connect_ble/: __init__.py  button.py  crc8.cpp  crc8.h  manifest.json  pairing.cpp  pairing.h  saber_parser.cpp  saber_parser.h  sensor.py  text_sensor.py  weber_connect_ble.cpp  weber_connect_ble.h
docs/: protocol.md
scripts/: validate_release.py
tests/: CMakeLists.txt  protocol_vectors.cpp  test_bridge_contracts.py  test_panel_contracts.py  validate.yaml
weber_connect_ble/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
weber_connect_ble/app/: requirements.txt  saber_frames.py  weber_ble_pair.py  weber_ble_scan.py  weber_panel.py  weber_status_bridge.py
weber_connect_ble/app/static/: index.html
weber_connect_ble/translations/: en.yaml
